syntax = "proto3";

package hashicorp.consul.internal.operator;

// Operator defines a set of operators operation applicable to Consul
service OperatorService {
  //Transfer raft leadership to another node
  rpc TransferLeader(TransferLeaderRequest) returns (TransferLeaderResponse) {}
}

message TransferLeaderRequest {
  string ID = 1;
}

//
// mog annotation:
//
// target=github.com/hashicorp/consul/api.TransferLeaderResponse
// output=operator.gen.go
// name=API
message TransferLeaderResponse {
  // true if the transfer is a success
  bool success = 1;
}
